tests/reference/asr-max2-1a7abed.stderr
semantic error: Arguments do not match for any generic procedure, max
 --> tests/max2.f90:3:5
  |
3 | s = max(x, y, z)
  |     ^^^^^^^^^^^^ 
